Updated the DL to DReal conversion for Box Modality operator